--- a/Ventas/templates/Ventas/raiz.html
+++ b/Ventas/templates/Ventas/raiz.html
@@ -36,6 +36,8 @@
                         <div class="text-center text-white">
                             <!-- Page heading-->
                             <h1 class="mb-5">TAMBERIA ALEMANA Calidad y Buenos Precios</h1>
+                            {% block nombre_seccion%}
+                            {% endblock %}
                             <!-- Signup form-->
                             <!-- * * * * * * * * * * * * * * *-->
                             <!-- * * SB Forms Contact Form * *-->
