--- a/Ventas/templates/Ventas/raiz.html
+++ b/Ventas/templates/Ventas/raiz.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+
 <html lang="en">
     <head>
 
@@ -35,27 +35,10 @@
                     <div class="col-xl-6">
                         <div class="text-center text-white">
                             <!-- Page heading-->
-                            <h1 class="mb-5">TAMBERIA ALEMANA Calidad y Buenos Precios</h1>
+                            <h1 class="mb-5" style="color:black">TAMBERIA ALEMANA Calidad y Buenos Precios</h1>
                             {% block nombre_seccion%}
                             {% endblock %}
-                            <!-- Signup form-->
-                            <!-- * * * * * * * * * * * * * * *-->
-                            <!-- * * SB Forms Contact Form * *-->
-                            <!-- * * * * * * * * * * * * * * *-->
-                            <!-- This form is pre-integrated with SB Forms.-->
-                            <!-- To make this form functional, sign up at-->
-                            <!-- https://startbootstrap.com/solution/contact-forms-->
-                            <!-- to get an API token!-->
-                            <form class="form-subscribe" id="contactForm" data-sb-form-api-token="API_TOKEN">
-                                <!-- Email address input-->
-                                <div class="row">
-                                    <div class="col">
-                                        <input class="form-control form-control-lg" id="emailAddress" type="email" placeholder="Email Address" data-sb-validations="required,email" />
-                                        <div class="invalid-feedback text-white" data-sb-feedback="emailAddress:required">Email Address is required.</div>
-                                        <div class="invalid-feedback text-white" data-sb-feedback="emailAddress:email">Email Address Email is not valid.</div>
-                                    </div>
-                                    <div class="col-auto"><button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Submit</button></div>
-                                </div>
+                            
                                 <!-- Submit success message-->
                                 <!---->
                                 <!-- This is what your users will see when the form-->
