--- a/Ventas/templates/Ventas/raiz.html
+++ b/Ventas/templates/Ventas/raiz.html
@@ -25,7 +25,7 @@
                 <a class="navbar-brand" href="{% url 'Portal' %}">Portal</a>
                 <a class="btn btn-primary" href="{% url 'Sardo' %}">Sardo</a>
                 <a class="btn btn-primary" href="{% url 'Reggiano' %}">Reggiano</a>
-                <a class="btn btn-primary" href="{% url 'Provolone' %}">Provolone</a>
+                <a class="btn btn-primary" href="{% url 'Provolone' %}">Provolone</a> <!-- hay que agregar los links para los formularios-->
             </div>
         </nav>
         <!-- Masthead-->
